--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
 </head>
 <body>
 <div id="abc"></div>
-<div id="cba"></div>
+<div id="cba" style="float:right;background:red;width:280px;height:100%;"></div>
 </body>
 </html>
 <script src="treeMenu.js"></script>
+<script>
+    new TreeMenu({selector: "#abc", data: menu, field: {id: "ids"}},function(e,url){
+        // alert("被点击的元素:"+e+" 被点击元素的url: "+url)
+    })
+    new TreeMenu({selector: "#cba",traversal:2, data: menu, field: {id: "ids"}},function(e,url){
+        // alert("被点击的元素:"+e+" 被点击元素的url: "+url)
+    })
+</script>
