--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     new TreeMenu({selector: "#abc", data: menu, field: {id: "ids"}},function(e,url){
         // alert("被点击的元素:"+e+" 被点击元素的url: "+url)
     })
-    new TreeMenu({selector: "#cba",traversal:2, data: menu, field: {id: "ids"}},function(e,url){
-        // alert("被点击的元素:"+e+" 被点击元素的url: "+url)
-    })
+    // new TreeMenu({selector: "#cba",traversal:2, data: menu, field: {id: "ids"}},function(e,url){
+    //     // alert("被点击的元素:"+e+" 被点击元素的url: "+url)
+    // })
 </script>
